<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addemployeeactivity">

    <EditText
        android:id="@+id/lnameEMP"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cnicEMP"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textColor="#021f54"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="88dp"
        android:layout_alignRight="@+id/cnicEMP" />

    <TextView
        android:id="@+id/AddEMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_employee"
        android:textColor="#021f54"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/cnicEMP"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="217dp"
        android:ems="10"
        android:hint="@string/cnic"
        android:inputType="number"
        android:textColor="#021f54"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="270dp" />

    <EditText
        android:id="@+id/emailEMP"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="#021f54"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="150dp" />

    <EditText
        android:id="@+id/fnameEMP"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cnicEMP"
        android:layout_alignTop="@+id/lnameEMP"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textColor="#021f54"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="88dp"
        android:layout_alignLeft="@+id/cnicEMP" />


    <Button
        android:id="@+id/uploadimageEMP"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/mybutton"
        android:text="@string/upload_image"
        android:textColor="#fff"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="418dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="36dp" />

    <Button
        android:id="@+id/cancelADDEMP"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/mybutton"
        android:text="@string/cancel"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="502dp" />

    <Button
        android:id="@+id/OkADDEMP"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/cancelADDEMP"
        android:layout_marginEnd="61dp"
        android:background="@drawable/mybutton"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="503dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="61dp" />

    <EditText
        android:id="@+id/phEMP"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/emailEMP"
        android:layout_marginTop="282dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="#021f54"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="210dp" />

    <EditText
        android:id="@+id/DepEMP"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/emailEMP"
        android:layout_marginBottom="217dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/department"
        android:textColor="#021f54"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="335dp"
        android:layout_alignLeft="@+id/emailEMP" />

    <EditText
        android:id="@+id/SalaryEMP"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/emailEMP"
        android:layout_marginBottom="276dp"
        android:ems="10"
        android:hint="@string/salary"
        android:inputType="number"
        android:textColor="#021f54"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="335dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="103dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="86dp"
        android:layout_marginStart="33dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />


</RelativeLayout>